--- a/indexAB.html
+++ b/indexAB.html
@@ -9,41 +9,42 @@
 
 <body>
     <!--header-->
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
 
-    <!--photo under header-->
+    <!--I tried repeatedly (and unsuccessfully) to move the img to here rather than it being in the CSS-->
+    <!--I have resigned to leaving it the way it was originally given to me-->
     <div class="hero"></div>
 
     <!--Content block-->
     <div class="content">
         <!--search engine optimization block-->
-        <div class="content-block">
-            <img src="./images/search-engine-optimization.jpg" class="float-left" />
+        <div class="contentBlock">
+            <img src="./images/search-engine-optimization.jpg" alt="A notepad with digital marketing strategies listed in it" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
         <!--online reputation management block-->
-        <div class="content-block">
-            <img src="./images/online-reputation-management.jpg" class="float-right" />
+        <div class="contentBlock">
+            <img src="./images/online-reputation-management.jpg" alt="A laptop on a desk displaying a bar graph" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
         <!--social media marketing block-->
-        <div class="content-block">
-            <img src="./images/social-media-marketing.jpg" class="float-left" />
+        <div class="contentBlock">
+            <img src="./images/social-media-marketing.jpg" alt="People sitting around a table discussing various social medias" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -54,25 +55,25 @@
     <!--Benefits section-->
     <div class="benefits">
         <!--lead generation block-->
-        <div class="benefit-block">
+        <div class="benefitBlock">
             <h3>Lead Generation</h3>
-            <img src="./images/lead-generation.png" />
+            <img src="./images/lead-generation.png" alt="dollar sign"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <!--brand awareness block-->
-        <div class="benefit-block">
+        <div class="benefitBlock">
             <h3>Brand Awareness</h3>
-            <img src="./images/brand-awareness.png" />
+            <img src="./images/brand-awareness.png" alt="light bulb"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <!--cost management block-->
-        <div class="benefit-block">
+        <div class="benefitBlock">
             <h3>Cost Management</h3>
-            <img src="./images/cost-management.png"></img>
+            <img src="./images/cost-management.png" alt="coins"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -80,12 +81,12 @@
     </div>
 
     <!--footer-->
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
